turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:26: error: type mismatch;
 found   : Int
 required: java.awt.Color
  paint(nextColor)
        ^